# wrench-board

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.fr.md  README.hi.md  README.zh.md  pyproject.toml  run_v551_vision.sh
api/: __init__.py  _token_check.py  config.py  env_bootstrap.py  http_security.py  logging_setup.py  main.py  ws_security.py
api/agent/: __init__.py  _session_mirrors.py  board_ref.py  board_state.py  chat_history.py  cloud_metering.py  conversation_log.py  cousin_hint.py  diagnosis_log.py  dispatch_bv.py  field_reports.py  macros.py  managed_ids.py  manifest.py  measurement_memory.py  memory_seed.py  memory_stores.py  owner_ref.py  pricing.py  recall.py  reliability.py  runtime_direct.py  sanitize.py  session_caps.py  session_start_mode.py  tool_dispatch.py  tools.py
api/board/: __init__.py  model.py  render.py  router.py  validator.py
api/cli/: __init__.py  pack_admin.py
api/pipeline/: __init__.py  auditor.py  build_metering.py  build_state.py  demo_seed.py  device_identity.py  device_kind.py  device_registry.py  drift.py  events.py  expand_metering.py  expansion.py  graph_transform.py  graph_truth.py  live_graph.py  models.py  orchestrator.py  pack_lint.py  pack_migrate.py  pack_sanitizer.py  pack_storage.py  patch.py  prompts.py  reconcile.py  registry.py  schemas.py  scout.py  tool_call.py  writers.py
api/profile/: __init__.py  derive.py  model.py  prompt.py  router.py  store.py  tools.py
api/session/: state.py
api/stock/: parts_index.py  router.py  search.py  store.py  tools.py
api/tools/: boardview.py  hypothesize.py  measurements.py  schematic.py  validation.py
board_assets/: smt-v551.brd
docs/dev-memory/: decisions.md  patterns.md  troubleshooting.md
memory/smt-v551/: raw_research_dump.md
rust/wb_fz_cipher/: Cargo.toml  pyproject.toml
rust/wb_fz_cipher/src/: lib.rs
rust/wb_tvw_walker/: Cargo.toml  pyproject.toml
rust/wb_tvw_walker/src/: lib.rs
scripts/: ab_cost_diag.py  backfill_device_kind.py  bench_agent_flow.py  bench_agentic_vision.py  bench_baseline_variance.py  bench_board_corpus.py  bootstrap_managed_agent.py  build_demo_pack.py  capture_demo_session.py  check_i18n_keys.py  check_web_imports.py  eval_all.py  eval_cartographe.py  eval_diagnostic_agent.py  eval_edges.py  eval_pipeline_vision.py  gen_kicad_extract.py  generate_bench_from_pack.py  graph_coverage_report.py  measure_build.py  profile_parsers.py  rebuild_mnt_pack.py  regen_low_conf_pages.py  scan_board_corpus.py  start.sh  test_tinno_api.py  test_unwrap.py  translate_js_comments_zh.py  translate_py_comments_zh.py  translate_py_css_html_comments_zh.py
tests/: conftest.py  run_v551_ingest.py  test_ab_cost_diag.py  test_env_bootstrap.py  test_http_security.py  test_progress_ws_token.py  test_token_check.py
tests/agent/: test_board_ref.py  test_board_refresh_notify.py  test_board_state.py  test_bootstrap_prompt.py  test_capabilities_frame.py  test_chat_history.py  test_cloud_metering.py  test_conversation_log.py  test_conversations.py  test_cousin_hint.py  test_diagnosis_log.py  test_diagnostic_ws_e2e.py  test_dump_tools_inventory.py  test_field_reports.py  test_forwarder_cloud_metering.py  test_graph_readers_owner.py  test_manifest_cam_conditional.py  test_manifest_dynamic.py  test_manifest_expand_gated.py  test_mb_aggregation.py  test_measurement_memory.py  test_memory_seed.py  test_memory_seed_delta.py  test_memory_stores.py  test_pricing.py  test_protocol_e2e.py  test_recall.py  test_render_system_prompt_cousin.py  test_runtime_camera_capture.py  test_runtime_camera_timeout.py  test_runtime_direct.py  test_runtime_macro_upload.py  test_runtime_managed_access.py  test_runtime_managed_async_safety.py  test_runtime_managed_async_wiring.py  test_runtime_managed_autoseed.py  test_runtime_managed_concurrent_ws.py  test_runtime_managed_e2e.py  test_runtime_managed_memory_failures.py  test_runtime_managed_mirror.py  (+8 more)
tests/board/: test_asc_parser.py  test_bdv_parser.py  test_bdv_real_variant.py  test_binary_rejection.py  test_brd2_parser.py  test_brd_packed_parser.py  test_brd_subst_parser.py  test_bv_parser.py  test_cad_cpd.py  (+27 more)
web/: brd_viewer.js  index.html  llm_panel.html  mascot_gallery.html
(+361 files in other folders)
